<resources>
    <!--<string name="app_ad_id">ca-app-pub-1128272413623536/7355164461</string>-->

    <!--Test ID-->
    <string name="app_ad_id">ca-app-pub-3940256099942544/2247696110</string>

    <string name="app_name">RapidBr</string>
    <string name="app_name1">Rapid</string>
    <string name="app_name2">Br</string>
    <string name="ok">OK</string>
    <string name="sett_main_scheduler">scheduled start</string>
    <string name="sett_main_blacklist">app blacklist</string>
    <string name="sett_main_filter">screen filter</string>
    <string name="sett_main_color">button color</string>
    <string name="sett_main_screen_filter">screen filter</string>
    <string name="sett_sched_desc">You can have RapidBr automatically start up and shut down
        depending on the time.
    </string>
    <string name="sett_sched_enable">Enable scheduler</string>
    <string name="sett_sched_start_title">Start time</string>
    <string name="sett_sched_start_desc">Start RapidBr every day at this time: %s.</string>
    <string name="sett_sched_stop_title">Stop time</string>
    <string name="sett_sched_stop_desc">Stop RapidBr every day at this time: %s.</string>
    <string name="sett_br_colour_desc">Set the color of the floating brightness icon.</string>
    <string name="sett_blacklist_desc">Pause RapidBr based on which app is currently open.
        Use this if you do not use Tasker integration. Swipe an item left or right to delete it.
    </string>
    <string name="sett_screen_filter_desc">Put a translucent overlay on top of the screen. This can
        be used to either darken beyond the screen\'s minimum brightness, or to change the colour
        temperature.
    </string>
    <string name="sett_blacklist_enable">Enable app blacklist</string>
    <string name="sett_blacklist_pick_prompt">Tap an app below to add it to the blacklist</string>
    <string name="sett_screen_filter_enable">Enable screen filter</string>
    <string name="sett_screen_filter_kcal_enable">Use KCAL</string>
    <string name="sett_screen_filter_temperature_enable">Change color temperature</string>
    <string name="sett_screen_filter_temperature">Color temperature</string>
    <string name="sett_screen_filter_temperature_intensity">Color temperature intensity</string>
    <string name="sett_boot_start_enable">Start on boot</string>
    <string name="start_app">Start</string>
    <string name="stop_app">Stop</string>
    <string name="top_status_running">Running</string>
    <string name="top_status_not_running">Not Running</string>
    <string name="top_filter_disabled">Screen filter is off</string>
    <string name="top_filter_percent">Screen filter is at %d %%</string>
    <string name="top_blacklist_disabled">App blacklist is disabled</string>
    <string name="top_blacklist_number">%d apps are blacklisted</string>
    <string name="top_blacklist_number_single">%d app is blacklisted</string>
    <string name="notif_running">RapidBr is running</string>
    <string name="notif_paused">RapidBr is paused</string>
    <string name="notif_subtext">Long press to hide</string>
    <string name="notif_channel_name">Ongoing notification</string>
    <string name="notif_channel_desc">Shows that the app is running</string>
    <string name="notif_resume">Resume</string>
    <string name="notif_pause">Pause</string>
    <string name="notif_stop">Stop</string>
    <string name="action_theme">Theme</string>
    <string name="action_theme_night">Dark theme</string>
    <string name="action_theme_day">Light theme</string>
    <string name="action_theme_battery">Based on battery saver</string>
    <string name="action_theme_system">Based on system theme</string>
</resources>
