<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/edge_padding"
    android:paddingEnd="@dimen/edge_padding"
    tools:context=".settings.bottom.scheduler.SchedulerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/GeneralHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edge_padding"
            android:text="@string/sett_main_scheduler" />

        <TextView
            style="@style/GeneralBodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sett_sched_desc" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edge_padding_internal"
            android:layout_marginBottom="@dimen/edge_padding"
            android:background="@drawable/card">

            <com.out386.rapidbr.settings.bottom.views.SwitchItem
                android:id="@+id/sched_enable_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:switchText="@string/sett_sched_enable" />


            <View
                android:id="@+id/sched_switch_div"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/edge_padding_internal"
                android:layout_marginEnd="@dimen/edge_padding_internal"
                android:background="@color/cardStroke"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sched_enable_switch" />

            <LinearLayout
                android:id="@+id/sched_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_ripple"
                android:orientation="vertical"
                android:padding="@dimen/edge_padding_internal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sched_switch_div">

                <TextView
                    style="@style/GeneralSubHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sett_sched_start_title" />

                <TextView
                    android:id="@+id/sched_start_desc"
                    style="@style/GeneralBodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sett_sched_start_desc" />

            </LinearLayout>

            <View
                android:id="@+id/sched_start_div"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/edge_padding_internal"
                android:layout_marginEnd="@dimen/edge_padding_internal"
                android:background="@color/cardStroke"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sched_start" />

            <LinearLayout
                android:id="@+id/sched_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_item_ripple"
                android:orientation="vertical"
                android:padding="@dimen/edge_padding_internal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sched_start_div">

                <TextView
                    style="@style/GeneralSubHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sett_sched_stop_title" />

                <TextView
                    android:id="@+id/sched_stop_desc"
                    style="@style/GeneralBodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/sett_sched_stop_desc" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>