<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingTop="32dp"
    android:paddingEnd="10dp"
    android:paddingBottom="32dp">

    <!--Why use a Recycler for just 4-5 items?-->

    <com.out386.rapidbr.settings.bottom.CardLayout
        android:id="@+id/cardLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:image="@drawable/ic_sett_schedule"
        app:image_tint="@color/icGreen"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/sett_main_scheduler" />

    <com.out386.rapidbr.settings.bottom.CardLayout
        android:id="@+id/cardLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:image="@drawable/ic_sett_color"
        app:image_tint="@color/icBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/sett_main_color" />

    <com.out386.rapidbr.settings.bottom.CardLayout
        android:id="@+id/cardLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:image="@drawable/ic_sett_blacklist"
        app:image_tint="@color/icYellow"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardLayout"
        app:text="@string/sett_main_blacklist" />

    <com.out386.rapidbr.settings.bottom.CardLayout
        android:id="@+id/cardLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:image="@drawable/ic_sett_filter"
        app:image_tint="@color/icPink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/cardLayout2"
        app:text="@string/sett_main_filter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
