<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/edge_padding"
    android:paddingEnd="@dimen/edge_padding"
    tools:context=".settings.bottom.scheduler.SchedulerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/GeneralHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edge_padding"
            android:text="@string/sett_main_screen_filter" />

        <TextView
            style="@style/GeneralBodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sett_screen_filter_desc" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edge_padding_internal"
            android:background="@drawable/card">

            <com.out386.rapidbr.settings.bottom.views.SwitchItem
                android:id="@+id/sfilter_enable_kcal_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchText="@string/sett_screen_filter_kcal_enable" />

            <View style="@style/Divider" />

            <com.out386.rapidbr.settings.bottom.views.SwitchItem
                android:id="@+id/sfilter_enable_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchText="@string/sett_screen_filter_enable" />

        </LinearLayout>

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edge_padding_huge"
            android:layout_marginBottom="@dimen/edge_padding"
            android:background="@drawable/card">

            <com.out386.rapidbr.settings.bottom.views.SwitchItem
                android:id="@+id/sfilter_temperature_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:switchText="@string/sett_screen_filter_temperature_enable" />

            <com.ramotion.fluidslider.FluidSlider
                android:layout_below="@id/sfilter_temp_title"
                android:id="@+id/sfilter_temp_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:size="small"
                app:start_text="Cool"
                app:end_text="Warm"
                android:layout_marginTop="-60dp"
                android:layout_marginStart="@dimen/edge_padding_internal"
                android:layout_marginEnd="@dimen/edge_padding_internal"
                android:layout_marginBottom="@dimen/edge_padding_huge" />

            <com.ramotion.fluidslider.FluidSlider
                android:layout_below="@id/sfilter_temp_inten_title"
                android:id="@+id/sfilter_temp_inten_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:start_text="1%"
                app:end_text="50%"
                app:size="small"
                android:layout_marginTop="-60dp"
                android:layout_marginStart="@dimen/edge_padding_internal"
                android:layout_marginEnd="@dimen/edge_padding_internal"
                android:layout_marginBottom="@dimen/edge_padding_huge" />

            <LinearLayout
                android:visibility="gone"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:id="@+id/sfilter_disable_temp"
                android:orientation="vertical"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_alignTop="@id/div1"
                android:layout_alignBottom="@id/sfilter_temp_inten_slider"
                android:background="@color/disabledView" />

            <View
                style="@style/Divider"
                android:id="@+id/div1"
                android:layout_below="@id/sfilter_temperature_switch" />

            <TextView
                android:layout_below="@id/div1"
                android:id="@+id/sfilter_temp_title"
                style="@style/GeneralSubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edge_padding_internal"
                android:layout_marginEnd="@dimen/edge_padding_internal_ultra_thin"
                android:layout_marginTop="@dimen/edge_padding_internal"
                android:layout_marginBottom="@dimen/edge_padding_internal"
                android:text="@string/sett_screen_filter_temperature" />

            <View
                style="@style/Divider"
                android:layout_below="@id/sfilter_temp_slider"
                android:id="@+id/div2" />

            <TextView
                android:layout_below="@id/div2"
                android:id="@+id/sfilter_temp_inten_title"
                style="@style/GeneralSubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/edge_padding_internal"
                android:layout_marginEnd="@dimen/edge_padding_internal_ultra_thin"
                android:layout_marginTop="@dimen/edge_padding_internal"
                android:layout_marginBottom="@dimen/edge_padding_internal"
                android:text="@string/sett_screen_filter_temperature_intensity" />

        </RelativeLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>